--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   }
 }
